# rae

./: README.md  build.bat  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  magic-chat-capability.json  magic-dot-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: Info.plist  commands.rs  main.rs  platform.rs  utils.rs
src-tauri/src/functions/: chat.rs  general.rs  mod.rs  overlay.rs  stealth.rs  supermemory.rs
src/api/: auth.ts  chat.ts  fetch.ts  notes.ts  updates.ts
src/components/: ChatHistoryTab.tsx  CodeBlock.tsx  Sidebar.tsx  SplashScreen.tsx  Titlebar.tsx  WindowControls.tsx
src/components/app/: Sidebar.tsx  SplashScreen.tsx  Titlebar.tsx  WindowControls.tsx
src/components/misc/: ChatHistoryTab.tsx  ConnectX.tsx
src/components/ui/: Button.tsx  Input.tsx  QuickAccessCard.tsx  Textarea.tsx
src/constants/: animations.ts  models.ts  shortcuts.ts
src/routes/: MainApp.tsx
src/routes/app/: page.tsx
src/routes/landing/: page.tsx
src/routes/magic-chat/: launchChatWindow.ts  page.tsx
src/routes/magicDot/: magicDot.tsx  magicDotLauncher.ts
src/routes/onboarding/: FetchInfo.tsx  OnBoardings.tsx  authstep.tsx  finishStep.tsx  magicdotstep.tsx  namestep.tsx  welcomestep.tsx
src/routes/overlay/: MagicDotLauncher.ts  Overlay.tsx  OverlayCard.tsx  OverlayComponents.tsx  OverlayLauncher.ts  chatView.tsx  magicDot.tsx  overlay.tsx
src/routes/settings/: page.tsx  (+2 more)
src/store/: chatStore.ts  darkThemeStore.ts  noteStore.ts  userStore.ts
src/types/: global-shortcut.d.ts
src/utils/: authSchema.ts  handleAiResponse.ts  windowUtils.ts
(+26 files in other folders)
