[package]
name = "rae"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rae_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
enigo = "0.1"                            # For mouse position

serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["png"] }
base64 = "0.21"

# Add winapi for Windows API access
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "psapi",
    "handleapi",
    "winnt",
    "shellapi",
    "shlobj",
    "combaseapi",
    "objbase",
    "shobjidl_core",
    "propsys",
    "wtypes",
    "propidl",
    "shtypes",
    "winbase",
    "wingdi",
] }

# Modern Windows bindings for COM/Shell (for packaged app icons)
windows = { version = "0.51.1", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Variant",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Com_StructuredStorage",
  "Win32_Graphics_Gdi",
  "Win32_UI_Accessibility",
] }
uiautomation = "0.22.2"
